<resources>
    <string name="app_name">Track Me</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Track Me!</string>
    <string name="slide_1_desc">The easiest way to keep cares your Beloveds!</string>

    <string name="slide_2_title">Kept them path</string>
    <string name="slide_2_desc">Choice who is your beloved!</string>

    <string name="slide_3_title">Activities</string>
    <string name="slide_3_desc">Choice the main activities your beloveds does!</string>

    <string name="slide_4_title">Transportation</string>
    <string name="slide_4_desc">Choice the main transportation of your Beloveds!</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_activities">Activities</string>
    <string name="hint_transportation">Transportation</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Ir Mapa</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="title_activity_track">Map</string>

    <string name="sign_out">Sign Out</string>
    <string name="change_account">Change User</string>
    <string name="settings">Settings</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="menu_start">START</string>
    <string name="menu_stop">STOP</string>
    <string name="marker_last_location">Last Location</string>
    <string name="title_alert_dialog">User Settings</string>
    <string name="dialog_btn_set">SET</string>
    <string name="dialog_btn_cancel">CANCEL</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required.</string>


    <string name="card_view_user_name">User Name</string>
    <string name="main_activity_title">Users</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activities_array">
        <item>None</item>
        <item>Walk</item>
        <item>Run</item>
        <item>Drive</item>
    </string-array>

    <string-array name="transportation_array">
        <item>None</item>
        <item>Bicycle</item>
        <item>Motorcycle</item>
        <item>Car</item>
        <item>Bus</item>
    </string-array>

</resources>
